--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hot-loader": "^4.13.0",
     "react-router-dom": "^5.2.0",
     "turbolinks": "^5.2.0"
   },
